--- a/about/index.html
+++ b/about/index.html
@@ -63,7 +63,9 @@
   <li>Arran Fernandez <sub>(president)</sub></li>
   <li>Anne Herrmann <sub>(secretary)</sub></li>
   <li>Mario Cekic <sub>(treasurer)</sub></li>
+  <li>Neil Khosla <sub>(public relations officer)</sub></li>
   <li>Hamed Masaood <sub>(events officer)</sub></li>
+  
 </ul>
 
 <h3 id="constitution">Constitution</h3>
