agm announcement update

--- a/about/index.html
+++ b/about/index.html
@@ -58,14 +58,32 @@
 
 <h3 id="committee">Committee</h3>
 
-<p>The day-to-day management of the Association is facilitated by the Committee:</p>
+<p>The day-to-day management of the Association is facilitated by the Committee.</p>
+
+<p>Committee for the academic year 2018/2019 is:</p>
+<ul>
+  <li>Arran Fernandez <sub>(president)</sub></li>
+  <li>Matteo Giordano <sub>(secretary)</sub></li>
+  <li>Mario Cekic <sub>(treasurer)</sub></li>
+  <li>Tanguy Grall <sub>(public relations officer)</sub></li>
+  <li>Hamed Masaood <sub>(events officer)</sub></li>
+</ul>
+
+<p>Committee for the academic year 2017/2018 was:</p>
 <ul>
   <li>Arran Fernandez <sub>(president)</sub></li>
   <li>Anne Herrmann <sub>(secretary)</sub></li>
   <li>Mario Cekic <sub>(treasurer)</sub></li>
   <li>Neil Khosla <sub>(public relations officer)</sub></li>
   <li>Hamed Masaood <sub>(events officer)</sub></li>
-  
+</ul>
+
+<p>The Founding Committee was:</p>
+<ul>
+  <li>Arran Fernandez <sub>(president)</sub></li>
+  <li>Anne Herrmann <sub>(secretary)</sub></li>
+  <li>Mario Cekic <sub>(treasurer)</sub></li>
+  <li>Jim Miller <sub>(public relations officer)</sub></li>
 </ul>
 
 <h3 id="constitution">Constitution</h3>
