--- a/about/index.html
+++ b/about/index.html
@@ -84,6 +84,7 @@
   <li>Anne Herrmann <sub>(secretary)</sub></li>
   <li>Mario Cekic <sub>(treasurer)</sub></li>
   <li>Jim Miller <sub>(public relations officer)</sub></li>
+  <li>Hamed Masaood <sub>(events officer)</sub></li>
 </ul>
 
 <h3 id="constitution">Constitution</h3>
